[package]
name = "application"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
example-messages = {path = "../example-messages"}
message-structs = {path = "../message-structs"}
handler-structs = {path = "../handler-structs"}
message-list = {path = "../message-list"}
example-handlers = {path = "../example-handlers"}