[package]
name = "application"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
example-messages = {path = "../example-messages"}
message-structs = {path = "../message-structs"}
handler-structs = {path = "../handler-structs"}
handler-list = {path = "../handler-list"}
example-handlers = {path = "../example-handlers"}
smol = "1.3.0"
context-structs = {path = "../context-structs"}
message-list = {path = "../message-list"}
oneshot = "0.1.5"
futures = "0.3.25"
