[package]
name = "application"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
context-structs.workspace = true
example-handlers.workspace = true
example-messages.workspace = true
handler-list.workspace = true
handler-structs.workspace = true
message-list.workspace = true
message-structs.workspace = true

futures.workspace = true
oneshot.workspace = true
smol.workspace = true
