[package]
name = "context-impl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
handler-structs.workspace = true
message-structs.workspace = true

proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
