[package]
name = "context-proc-macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro-helpers.workspace = true

syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
