[package]
name = "example-handlers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
example-messages = {path = "../example-messages"}
handler-proc-macros = {path = "../handler-proc-macros"}
handler-structs = {path = "../handler-structs"}
message-structs = {path = "../message-structs"}
futures = "0.3.27"
message-list = {path = "../message-list"}
context-structs = {path = "../context-structs"}
