[package]
name = "handler-list"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
context-impl.workspace = true
context-proc-macros.workspace = true
example-handlers.workspace = true
handler-structs.workspace = true
message-list.workspace = true
