[package]
name = "message-list"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
example-messages = {path = "../example-messages"}
context-proc-macros = {path = "../context-proc-macros"}
message-structs = {path = "../message-structs"}
context-structs = {path = "../context-structs"}